--- a/webroot/skin/frontend/blueacorn/mis/scss/core/_form.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/core/_form.scss
@@ -80,6 +80,24 @@ form .legend {
     }
 }
 
+.block-subscribe {
+    .input-box {
+
+        &.validation-passed:before {
+            content: "\f00c";
+            font-family: $f-stack-icon-alt;
+            color: $brand-success;
+            background: $white;
+            font-size: 17px;
+            position: absolute;
+            top: auto;
+            bottom: 8px;
+            left: -19px;
+        }
+    }
+}
+
+
 li.centinel-logos div.input-box  {
     img {
         display: inline;
